# Text-to-Motion

./: .gitignore  README.md  generation.sh  pyproject.toml
scripts/: calculate_embeddings.py  inference.py  train.py  viser_generate_play.py  viser_motion_play.py  viser_robot_play.py
src/efficient_model/: __init__.py  adaln.py  attention.py  norm.py  swiglu.py  transformer.py
src/text_to_motion/: __init__.py  config.py  dataset.py  diffusion_net.py  embedder_model.py  math.py  spatial_dataset.py  temporal_dataset.py  utils.py
