[project]
name = "text_to_motion"
version = "0.1.0"
description = "Project on generating motion by prompt"
readme = "README.md"
authors = [
    { name = "Egor", email = "egormipt@yandex.ru" }
]
requires-python = ">=3.10"
dependencies = [
    "viser",
    "tyro",
    "robot_descriptions",
    "packaging==26.0",
    "liger-kernel==0.7.0",
    "torch",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.setuptools.packages.find]
include = ["efficient_model*"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
flash = [
    "flash-attn==2.8.3",
]

[tool.uv]
# flash-attn requires torch to be installed first and needs --no-build-isolation
no-build-isolation-package = ["flash-attn"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"