[project]
name = "text_to_motion"
version = "0.1.0"
description = "Project on generating motion by prompt"
readme = "README.md"
authors = [
    { name = "Egor", email = "egormipt@yandex.ru" }
]
requires-python = "==3.12"
dependencies = [
    "viser",
    "tyro",
    "robot_descriptions",
    "packaging==26.0",
    "liger-kernel==0.7.0",
    "flash-attn==2.8.3",
    "torch",
    "psutil",
    "transformers",
    "vllm>=0.17.0"
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.10-cp312-cp312-linux_x86_64.whl" }

[tool.setuptools.packages.find]
include = ["efficient_model*"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
